syntax = "proto3";

package project.planton.provider.aws.awsvpc.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/aws/awsvpc/v1/spec.proto";
import "project/planton/provider/aws/awsvpc/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";

//aws-vpc
message AwsVpc {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'aws.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'AwsVpc'];

  //metadata
  project.planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  AwsVpcSpec spec = 4 [(buf.validate.field).required = true];

  //status
  AwsVpcStatus status = 5;
}

//aws-vpc status
message AwsVpcStatus {
  //stack-outputs
  AwsVpcStackOutputs outputs = 1;
}
